--- a/server/public/views/styles.css
+++ b/server/public/views/styles.css
@@ -25,7 +25,6 @@ table {
   padding:10px;
   border-radius: 10px;
   margin-top: 20px;
-
   max-width:90%;
 }
 
@@ -51,6 +50,7 @@ th {
   text-align: center;
   padding-left: 30px;
   font-size: 1.33em;
+  min-width: 300px;
 }
 
 td {
